# sicredi-python-challenge

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
src/core/: logger.py
src/models/: contract.py  orders.py
src/services/: contract_svc.py  orders_svc.py
tests/: test_contract_service.py  test_orders_service.py
