[project]
name = "sicredi-python-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "“YanPina",email = "yanpina85@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
black = "^25.1.0"
ruff = "^0.9.8"
isort = "^6.0.1"
flake8 = "^7.1.2"
mypy = "^1.15.0"


# 🔹 Black - Code Formatter
[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'

# 🔹 isort - Import Sorting
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
skip_gitignore = true

# 🔹 Ruff - Linting and Fixes
[tool.ruff]
line-length = 79
target-version = "py311"
lint.select = ["E", "F", "F401"]
# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# 🔹 mypy - Static Type Checking
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true